Add comment to covid-19 project

--- a/Projects/Covid-19/Covid-19.ipynb
+++ b/Projects/Covid-19/Covid-19.ipynb
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "461c4fb8",
+   "id": "4d038a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "# number of cases for a given date.\n",
+    "# number of cases for a given date\n",
     "\n",
     "print(number_of_cases(cases, '14/8/2021'))"
    ]
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "# number of males and females for a range of dates.\n",
+    "# number of males and females for a range of dates\n",
     "\n",
     "print(number_of_cases_by_sex(cases, '14/8/2021', '16/8/2021'))"
    ]
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "97f1e4b1",
+   "id": "840d92a1",
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +261,8 @@
     }
    ],
    "source": [
+    "# returns the distribution of ages\n",
+    "\n",
     "print(number_of_cases_by_ages(cases, [(0,19), (20,39), (40,59), (60,79), (80,99), (100, 119)]))"
    ]
   }
