--- a/Projects/Covid-19/Covid-19.ipynb
+++ b/Projects/Covid-19/Covid-19.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Covid-19 Cases in Thailand\n",
     "\n",
+    "**Data source**: https://data.go.th/dataset/covid-19-daily\n",
+    "\n",
     "- Write a program to read a csv file of covid-19 cases in Thailand from 12 August 2021.\n",
     "\n",
     "## Steps\n",
